# notebooks

./: cayleypy-upper-triangular-full-size-4.ipynb  cayleypy-upper-triangular-size-4.ipynb  cayleypy_upper_triangular_utils.py  ideas.md  pyproject.toml  setup.py
